--- a/package.json
+++ b/package.json
@@ -9,17 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
     "@types/node": "20.8.7",
     "@types/react": "18.2.30",
     "@types/react-dom": "18.2.14",
     "autoprefixer": "10.4.16",
     "eslint": "8.51.0",
     "eslint-config-next": "13.5.6",
+    "express": "^4.18.2",
     "next": "13.5.6",
-    "postcss": "8.4.31",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.3",
+    "tailwind": "^4.0.0",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "init": "^0.1.2",
+    "npx": "^10.2.2",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.5"
   }
 }
