craete login page

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.11.0",
     "tailwind": "^4.0.0",
+    "tw-elements-react": "^1.0.0-alpha2",
     "typescript": "5.2.2"
   },
   "devDependencies": {
