--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "test",
+  "name": "next-full-app",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,25 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@headlessui/react": "^1.7.17",
-    "@heroicons/react": "^2.0.18",
-    "@types/node": "20.8.7",
-    "@types/react": "18.2.30",
-    "@types/react-dom": "18.2.14",
-    "autoprefixer": "10.4.16",
-    "eslint": "8.51.0",
-    "eslint-config-next": "13.5.6",
-    "express": "^4.18.2",
-    "next": "13.5.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "tailwind": "^4.0.0",
-    "typescript": "5.2.2"
+    "react": "^18",
+    "react-dom": "^18",
+    "next": "14.0.1"
   },
   "devDependencies": {
-    "init": "^0.1.2",
-    "npx": "^10.2.2",
-    "postcss": "^8.4.31",
-    "tailwindcss": "^3.3.5"
+    "typescript": "^5",
+    "@types/node": "^20",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
+    "autoprefixer": "^10.0.1",
+    "postcss": "^8",
+    "tailwindcss": "^3.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.0.1"
   }
 }
